# aurora-robot-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
assign_cells_to_press/: assign_cells_to_press.go  assign_cells_to_press.py
aurora_robot_tools/: assign_cells_to_press.py  backup_database.py  capacity_balance.py  chemapp_edit.py  cli.py  config.py  electrolyte_calculation.py  import_excel.py  output_json.py  step_definition.py  version.py
aurora_robot_tools/backup_database/: backup_database.go
aurora_robot_tools/camera/: alignment.py  camera_daemon.py  capture_bottom.py  capture_image.py  process_image.py  ringlight.py  send_camera_command.py
aurora_robot_tools/camera/gxipy/: __init__.py  gxiapi.py
aurora_robot_tools/capacity_balance/: capacity_balance.go  capacity_balance.py
aurora_robot_tools/electrolyte_calculation/: electrolyte_calculation.go
aurora_robot_tools/import_excel/: import_excel.py
aurora_robot_tools/output_csv/: output_csv.go  output_csv.py
backup_database/: backup_database.py
camera/: capture_image.go  capture_image.py
camera/gxipy/: gxwrapper.py
capacity_balance/: capacity_balance.go  capacity_balance.py
electrolyte_calculation/: electrolyte_calculation.go  electrolyte_calculation.py
import_excel/: import_excel.go  import_excel.py
output_csv/: output_csv.py
tests/: test_imports.py
