[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-robot-tools"
requires-python = ">=3.9"
version = "0.2.0"
dependencies = [
    "h5py",
    "iai-gxipy",
    "numpy",
    "opencv-python",
    "openpyxl",
    "pandas",
    "pillow",
    "pulp",
    "pytz",
    "pyserial",
    "scipy",
    "typer",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[project.scripts]
aurora-rt = "aurora_robot_tools.cli:app"

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "N806",
    "T201",
    "FA102",
    "PD901",
    "FBT001",
    "FBT002",
    "PLR2004",
    "TD002",
    "TD003",
    "D203",
    "D213",
    "COM812",
]
fix = true

[tool.mypy]
disable_error_code = ["import-untyped"]
