[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-robot-tools"
requires-python = ">=3.9"
version = "0.2.0"
dependencies = [
    "h5py>=3.14.0",
    "iai-gxipy>=2.0.2407.9061",
    "lxml>=6.0.1",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pulp>=3.2.2",
    "pyserial>=3.5",
    "pytz>=2025.2",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
    "typer>=0.17.3",
    "xmltodict>=0.14.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[project.scripts]
aurora-rt = "aurora_robot_tools.cli:app"

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "N806",
    "T201",
    "FA102",
    "PD901",
    "FBT001",
    "FBT002",
    "PLR2004",
    "TD002",
    "TD003",
    "D203",
    "D213",
    "COM812",
]
fix = true

[tool.mypy]
disable_error_code = ["import-untyped"]
